infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: skillpath
  labels:
    app: skillpath
