infra/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skillpath-api
  namespace: skillpath
  labels:
    app: skillpath
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: skillpath
    component: api
